--- a/calculator/package.json
+++ b/calculator/package.json
@@ -14,6 +14,7 @@
     "@types/react-dom": "^18.0.11",
     "@types/styled-components": "^5.1.26",
     "babel-loader": "^9.1.2",
+    "cypress": "^12.10.0",
     "eslint": "^8.38.0",
     "html-webpack-plugin": "^5.5.0",
     "i18next": "^22.4.14",
@@ -29,7 +30,6 @@
     "redux-thunk": "^2.4.2",
     "styled-components": "^5.3.9",
     "ts-loader": "^9.4.2",
-    "typescript": "^5.0.4",
     "webpack": "^5.78.0",
     "webpack-cli": "^5.0.1",
     "webpack-dev-server": "^4.13.2",
@@ -37,14 +37,17 @@
   },
   "scripts": {
     "start": "webpack serve --mode development",
-    "lint": "eslint src/**/*.ts src/**/*.tsx",
-    "lint:fix": "eslint --fix",
+    "eslint:test": "eslint src --ext .js,.jsx",
+    "eslint:fix": "eslint --fix src --ext .js,.jsx",
+    "cypress:open": "cypress open",
+    "cypress:run": "cypress run",
     "build": "webpack"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.58.0",
     "@typescript-eslint/parser": "^5.58.0",
     "eslint-plugin-react": "^7.32.2",
-    "eslint-webpack-plugin": "^4.0.1"
+    "eslint-webpack-plugin": "^4.0.1",
+    "typescript": "^4.0.0"
   }
 }
